<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/background"
    tools:context=".AddClientActtivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_last_name_label"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/text"
        />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:contentDescription="@string/last_name"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:background="@color/background"
        android:textColor="@color/text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pr_nom"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/text"
        />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:contentDescription="@string/first_name"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:background="@color/background"
        android:textColor="@color/text"
        />

    <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sexe"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/text"
        />

    <RadioGroup
        android:id="@+id/client_gender_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <RadioButton
            android:id="@+id/add_client_gender_man_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homme"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/text"
            />
        <RadioButton
            android:id="@+id/add_client_gender_woman_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femme"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:textColor="@color/text"
            />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:textColor="@color/text"
            />
        <SeekBar
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:max="100"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Niveau"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/text"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/niveau"
        android:entries="@array/niveau"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Actif"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/text"
        />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/actif"
        android:layout_marginBottom="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">
        <Button
            android:id="@+id/add_button_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajouter"
            android:padding="16dp"
            android:background="@color/button_background"
            android:textColor="@color/button_text"
            />
    </LinearLayout>
</LinearLayout>